--- a/.gitignore
+++ b/.gitignore
@@ -8,6 +8,8 @@ tools/caffe_converter/*.params
 tools/caffe_converter/*.json
 tools/caffe_converter/*.prototxt
 tools/caffe_converter/*.caffemodel
+matlab/caltechUSA/results/*
+matlab/caltechUSA/data-USA/*
 mxnet/
 .DS_Store
 .idea/
