--- a/.gitignore
+++ b/.gitignore
@@ -10,6 +10,7 @@ tools/caffe_converter/*.prototxt
 tools/caffe_converter/*.caffemodel
 matlab/caltechUSA/results/*
 matlab/caltechUSA/data-USA/*
+matlab/kitti/results/*
 mxnet/
 .DS_Store
 .idea/
