--- a/.gitignore
+++ b/.gitignore
@@ -11,6 +11,7 @@ tools/caffe_converter/*.caffemodel
 matlab/caltechUSA/results/*
 matlab/caltechUSA/data-USA/*
 matlab/kitti/results/*
+matlab/kitti/anchors/*
 mxnet/
 .DS_Store
 .idea/
