central area cropped with annotations & occlusion level upgraded

--- a/.gitignore
+++ b/.gitignore
@@ -12,6 +12,7 @@ matlab/caltechUSA/results/*
 matlab/caltechUSA/data-USA/*
 matlab/kitti/results/*
 matlab/kitti/anchors/*
+matlab/kitti/anchors_customized/*
 mxnet/
 .DS_Store
 .idea/
